[gd_scene load_steps=4 format=3 uid="uid://dak1bgfujj7jq"]

[ext_resource type="Script" path="res://Cenas/pause_menu.gd" id="1_6unxj"]

[sub_resource type="Theme" id="Theme_2i2vi"]

[sub_resource type="FontFile" id="FontFile_k3qi6"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="Pause_Menu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_6unxj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 8.0
grow_horizontal = 2

[node name="quit_bt" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "SAIR DO JOGO"

[node name="reiniciar_bt" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_2i2vi")
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "REINICIAR"

[node name="voltar_bt" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = SubResource("FontFile_k3qi6")
text = "VOLTAR"

[connection signal="pressed" from="VBoxContainer/quit_bt" to="." method="_on_quit_bt_pressed"]
[connection signal="pressed" from="VBoxContainer/reiniciar_bt" to="." method="_on_reiniciar_bt_pressed"]
[connection signal="pressed" from="VBoxContainer/voltar_bt" to="." method="_on_voltar_bt_pressed"]
